--- a/.obsidian.mobile/workspace
+++ b/.obsidian.mobile/workspace
@@ -1,15 +1,15 @@
 {
   "main": {
-    "id": "9cbb2ed15c2d19cb",
+    "id": "0664324a21221b7f",
     "type": "split",
     "children": [
       {
-        "id": "b36b4db8ee533931",
+        "id": "3b1ad72d2e645b07",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "未命名.md",
+            "file": "days/day_template.md",
             "mode": "source"
           }
         }
@@ -57,7 +57,7 @@
         "state": {
           "type": "backlink",
           "state": {
-            "file": "未命名.md",
+            "file": "days/day_template.md",
             "collapseAll": false,
             "extraContext": false,
             "sortOrder": "alphabetical",
@@ -67,12 +67,24 @@
             "unlinkedCollapsed": true
           }
         }
+      },
+      {
+        "id": "d7e1093095aea9dc",
+        "type": "leaf",
+        "state": {
+          "type": "outline",
+          "state": {
+            "file": "days/day_template.md"
+          }
+        }
       }
     ],
     "currentTab": 0
   },
-  "active": "b36b4db8ee533931",
+  "active": "3b1ad72d2e645b07",
   "lastOpenFiles": [
+    "days/day_template.md",
+    "未命名 1.md",
     "未命名.md"
   ]
 }
